# FoveaCore

./: .gdlintrc  .gitignore  AUDIT_AND_TASKS.md  AUDIT_COMPLET_2026-05-02.md  CHANGELOG.md  CLAUDE.md  DEPENDENCIES.md  FINAL_EVALUATION.md  README.md  ROADMAP.md  icon.svg.import  project.godot  test_foveacore.gd  test_foveacore.gd.uid  test_foveacore.tscn
.github/workflows/: ci.yml
.kilocode/: task_history.json
ScreenShot/: Screenshot 2026-05-03 163554.png.import
Videos test/: TreeTest1.png.import
addons/foveacore/: COLOR_QUANTIZATION.md  OPTIMISATION_TRIANGLE_SPLAT.md  (+5 more)
addons/foveacore/rust/splat_sorter/: Cargo.toml  gdextension.toml
addons/foveacore/rust/splat_sorter/src/: lib.rs
docs/: 20 Tips I Wish I Knew When I Starte.txt  3D GAUSSIAN SPLATTING with POSTSHOT.txt  Removing Splats and cleaning 3DGS m.txt  star_integration.md
my icone/: Earthandcheck.png.import  Earthandcheckv2.png.import
plans/: advanced_features_plan.md  analyse_vista4d_anyrecon.md  diagnostic_technique_foveacore.md  fake_volume_shader_test.md  fovea_fast_path.h  foveacore-architecture.md  foveacore_audit.md  integration_worldmirror2.md  layered_splatting_doc.md  proxy_reconstruction_plan.md  proxy_shader_prototype.md  reconstruction_prompts.md  studio_to_3d_plan.md  technical_fix_plan.md
scratch/: check_methods.gd  check_methods.gd.uid
scripts/: requirements_worldmirror.txt  setup_diffsynth.bat  setup_diffsynth.sh  setup_worldmirror.bat  setup_worldmirror.sh
test/: palette_benchmark.gd  palette_benchmark.gd.uid  test_style_engine_desktop.tscn
tutorials/: get_started.md
(+291 files in other folders)
