[package]
name = "fovea_splat_sorter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
godot = { version = "0.10", features = ["export"] }
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.21", features = ["derive"] }
 rayon = { version = "1.10", optional = true }

[features]
default = []
multithread = ["rayon"]
